; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/mmu/extr_vmmgm200.c_gm200_vmm_new.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/mmu/extr_vmmgm200.c_gm200_vmm_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_mmu = type { i32 }
%struct.lock_class_key = type { i32 }
%struct.nvkm_vmm = type { i32 }

@gm200_vmm_16 = common dso_local global i32 0, align 4
@gm200_vmm_17 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gm200_vmm_new(%struct.nvkm_mmu* %0, i32 %1, i32 %2, i32 %3, i8* %4, i32 %5, %struct.lock_class_key* %6, i8* %7, %struct.nvkm_vmm** %8) #0 {
  %10 = alloca %struct.nvkm_mmu*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca %struct.lock_class_key*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca %struct.nvkm_vmm**, align 8
  store %struct.nvkm_mmu* %0, %struct.nvkm_mmu** %10, align 8
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i8* %4, i8** %14, align 8
  store i32 %5, i32* %15, align 4
  store %struct.lock_class_key* %6, %struct.lock_class_key** %16, align 8
  store i8* %7, i8** %17, align 8
  store %struct.nvkm_vmm** %8, %struct.nvkm_vmm*** %18, align 8
  %19 = load %struct.nvkm_mmu*, %struct.nvkm_mmu** %10, align 8
  %20 = load i32, i32* %11, align 4
  %21 = load i32, i32* %12, align 4
  %22 = load i32, i32* %13, align 4
  %23 = load i8*, i8** %14, align 8
  %24 = load i32, i32* %15, align 4
  %25 = load %struct.lock_class_key*, %struct.lock_class_key** %16, align 8
  %26 = load i8*, i8** %17, align 8
  %27 = load %struct.nvkm_vmm**, %struct.nvkm_vmm*** %18, align 8
  %28 = call i32 @gm200_vmm_new_(i32* @gm200_vmm_16, i32* @gm200_vmm_17, %struct.nvkm_mmu* %19, i32 %20, i32 %21, i32 %22, i8* %23, i32 %24, %struct.lock_class_key* %25, i8* %26, %struct.nvkm_vmm** %27)
  ret i32 %28
}

declare dso_local i32 @gm200_vmm_new_(i32*, i32*, %struct.nvkm_mmu*, i32, i32, i32, i8*, i32, %struct.lock_class_key*, i8*, %struct.nvkm_vmm**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
